# future-lazy-imports

./: .pre-commit-config.yaml  README.md  future_lazy_imports.py  setup.cfg  setup.py
