[metadata]
name = future_lazy_imports
version = 1.0.0
description = a backport of lazy imports to python<3.15
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/future-lazy-imports
author = anthony sottile
author_email = asottile@umich.edu
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = future_lazy_imports
install_requires =
    tokenize-rt>=6.1
python_requires = >=3.10

[options.entry_points]
console_scripts =
    future-lazy-imports-show=dict_unpacking_at_home:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
